recommendation enging with pandas

--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6363f042-6dd0-47c7-acb0-6af0a0b7c446",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "42ce7db2-842e-4294-ad72-db009e02a857",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/ironduke/Workspace/jupyter/likes.csv')"
+    "df = pd.read_csv('/home/ironduke/Workspace/AIML-jupyter/likes.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "1941b945-4ece-48f0-bd0e-ac40770d9248",
    "metadata": {},
    "outputs": [
@@ -30,18 +30,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['picture', 'book', 'movie', 'controller'], dtype='object')\n"
+      "  picture book movie controller\n",
+      "0       +    -     +          +\n",
+      "1       0    +     -          -\n",
+      "2       +    +     -          0\n",
+      "3       -    0     +          0\n",
+      "4       +    +     0          -\n"
      ]
     }
    ],
    "source": [
-    "print(df.columns)"
+    "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "60473435-e525-4c75-a80c-6b86c526d2cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = df.index.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9563aa52-11bc-47bf-b597-b7ca41842d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  picture book movie controller\n",
+      "0       +    -     +          +\n",
+      "2       +    +     -          0\n",
+      "4       +    +     0          -\n",
+      "3       -    0     +          0\n",
+      "1       0    +     -          -\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.sort_values(by='picture')\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ca19790b-f8cf-469d-aa7c-2101fdea17a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "picture       0\n",
+      "book          +\n",
+      "movie         -\n",
+      "controller    -\n",
+      "Name: 1, dtype: object\n",
+      "==============\n",
+      "picture       +\n",
+      "book          +\n",
+      "movie         -\n",
+      "controller    0\n",
+      "Name: 2, dtype: object\n",
+      "==============\n",
+      "Empty DataFrame\n",
+      "Columns: [picture, book, movie, controller]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.loc[1])\n",
+    "print(\"==============\")\n",
+    "print(df.iloc[1])\n",
+    "print(\"==============\")\n",
+    "print(df.loc[1:3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60473435-e525-4c75-a80c-6b86c526d2cc",
+   "id": "56543956-fa6a-4546-8dbd-bfb4d0ffe9aa",
    "metadata": {},
    "outputs": [],
    "source": []
